src/tests/snapshots/cclv__tests__view_snapshots__bug_tab_key_cycle_after_second_press.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_subagent_001 │ toolu_subagent_002                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌toolu_subagent_001 [Sonnet] (2 entries)───────────────────────────────────────────────────────────┐
││  1 Subagent 1 task                                                                              │
│                                                                                                  │
││  2 Subagent 1 working on task.                                                                  │
│── 5 in / 10 out / $0.00 | Context: 5 (0%) ──                                                     │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | !: Global | @: Main | #: Current | Tab: Cycle panes
