src/tests/snapshots/cclv__tests__view_snapshots__bug_thinking_blocks_not_wrapped.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Conversations─────────────────────────────────────────────┐
│ Main                                                     │
└──────────────────────────────────────────────────────────┘
┌Main [Opus] (1 entries)───────────────────────────────────┐
││  1 This is a short line.                                │
││                                                         │
││    This is a very long line that should definitely wrap │
││    when displayed in a narrow terminal window because it│
││     exceeds the typical width of most terminal displays.│
││                                                         │
││    Another short line.                                  │
│── ↓100/100 ↑50/100 / $0.01 | Context: 150 (0%) ──        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search
